# openclaw-last30research

./: .env.example  .gitignore  SKILL.md  pyproject.toml
config/: projects.yaml
docs/: PRD.md
scripts/: report.py  research.py  session_memory.py
scripts/platform/: __init__.py  hn_search.py  polymarket_search.py  reddit_search.py  tavily_search.py  telegram_search.py  x_search.py  youtube_search.py
tests/: __init__.py  test_reddit_search.py  test_report.py  test_research.py  test_session_memory.py  test_tavily_search.py
