[project]
name = "last30research"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.31.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
    "tavily>=1.1.0",
    "telethon>=1.42.0",
    "yt-dlp>=2025.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
